// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action run Happy Path: Info 1`] = `
Array [
  "Pull request info",
  "Reviews Given: 2",
  "Requested Remaining: 1",
  "approved: 0",
  "approved for Allowed Collaborators: 0",
  "changes_requested: 2",
  "changes_requested for Allowed Collaborators: 2",
  "commented: 0",
  "commented for Allowed Collaborators: 0",
  "dismissed: 0",
  "dismissed for Allowed Collaborators: 0",
  "pending: 0",
  "pending for Allowed Collaborators: 0",
  "Done",
]
`;

exports[`action run Happy Path: setOutput 1`] = `
Array [
  "reviews, 2",
  "requested, 1",
  "approved, 0",
  "approved_collaborator, 0",
  "approved_contributor, 0",
  "approved_first_time_contributor, 0",
  "approved_first_timer, 0",
  "approved_member, 0",
  "approved_owner, 0",
  "approved_none, 0",
  "approved_collaborators, 0",
  "changes_requested, 2",
  "changes_requested_collaborator, 0",
  "changes_requested_contributor, 1",
  "changes_requested_first_time_contributor, 0",
  "changes_requested_first_timer, 1",
  "changes_requested_member, 0",
  "changes_requested_owner, 0",
  "changes_requested_none, 0",
  "changes_requested_collaborators, 2",
  "commented, 0",
  "commented_collaborator, 0",
  "commented_contributor, 0",
  "commented_first_time_contributor, 0",
  "commented_first_timer, 0",
  "commented_member, 0",
  "commented_owner, 0",
  "commented_none, 0",
  "commented_collaborators, 0",
  "dismissed, 0",
  "dismissed_collaborator, 0",
  "dismissed_contributor, 0",
  "dismissed_first_time_contributor, 0",
  "dismissed_first_timer, 0",
  "dismissed_member, 0",
  "dismissed_owner, 0",
  "dismissed_none, 0",
  "dismissed_collaborators, 0",
  "pending, 0",
  "pending_collaborator, 0",
  "pending_contributor, 0",
  "pending_first_time_contributor, 0",
  "pending_first_timer, 0",
  "pending_member, 0",
  "pending_owner, 0",
  "pending_none, 0",
  "pending_collaborators, 0",
]
`;

exports[`action run Should handle no data: setOutput 1`] = `
Array [
  "reviews, 0",
  "requested, 0",
  "approved, 0",
  "approved_collaborator, 0",
  "approved_contributor, 0",
  "approved_first_time_contributor, 0",
  "approved_first_timer, 0",
  "approved_member, 0",
  "approved_owner, 0",
  "approved_none, 0",
  "approved_collaborators, 0",
  "changes_requested, 0",
  "changes_requested_collaborator, 0",
  "changes_requested_contributor, 0",
  "changes_requested_first_time_contributor, 0",
  "changes_requested_first_timer, 0",
  "changes_requested_member, 0",
  "changes_requested_owner, 0",
  "changes_requested_none, 0",
  "changes_requested_collaborators, 0",
  "commented, 0",
  "commented_collaborator, 0",
  "commented_contributor, 0",
  "commented_first_time_contributor, 0",
  "commented_first_timer, 0",
  "commented_member, 0",
  "commented_owner, 0",
  "commented_none, 0",
  "commented_collaborators, 0",
  "dismissed, 0",
  "dismissed_collaborator, 0",
  "dismissed_contributor, 0",
  "dismissed_first_time_contributor, 0",
  "dismissed_first_timer, 0",
  "dismissed_member, 0",
  "dismissed_owner, 0",
  "dismissed_none, 0",
  "dismissed_collaborators, 0",
  "pending, 0",
  "pending_collaborator, 0",
  "pending_contributor, 0",
  "pending_first_time_contributor, 0",
  "pending_first_timer, 0",
  "pending_member, 0",
  "pending_owner, 0",
  "pending_none, 0",
  "pending_collaborators, 0",
]
`;

exports[`action run Should use inputs: setOutput 1`] = `
Array [
  "reviews, 2",
  "requested, 1",
  "approved, 0",
  "approved_collaborator, 0",
  "approved_contributor, 0",
  "approved_first_time_contributor, 0",
  "approved_first_timer, 0",
  "approved_member, 0",
  "approved_owner, 0",
  "approved_none, 0",
  "approved_collaborators, 0",
  "changes_requested, 2",
  "changes_requested_collaborator, 0",
  "changes_requested_contributor, 1",
  "changes_requested_first_time_contributor, 0",
  "changes_requested_first_timer, 1",
  "changes_requested_member, 0",
  "changes_requested_owner, 0",
  "changes_requested_none, 0",
  "changes_requested_collaborators, 1",
  "commented, 0",
  "commented_collaborator, 0",
  "commented_contributor, 0",
  "commented_first_time_contributor, 0",
  "commented_first_timer, 0",
  "commented_member, 0",
  "commented_owner, 0",
  "commented_none, 0",
  "commented_collaborators, 0",
  "dismissed, 0",
  "dismissed_collaborator, 0",
  "dismissed_contributor, 0",
  "dismissed_first_time_contributor, 0",
  "dismissed_first_timer, 0",
  "dismissed_member, 0",
  "dismissed_owner, 0",
  "dismissed_none, 0",
  "dismissed_collaborators, 0",
  "pending, 0",
  "pending_collaborator, 0",
  "pending_contributor, 0",
  "pending_first_time_contributor, 0",
  "pending_first_timer, 0",
  "pending_member, 0",
  "pending_owner, 0",
  "pending_none, 0",
  "pending_collaborators, 0",
]
`;
